<resources>
    <string name="app_name">QuarantApp</string>
    <string name="registrarme">Registrarme</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="logoimg">logoimg</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="channel_name">QuarantGreenNotif</string>
    <string name="channel_description">QG Notif Channel</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_home_menu">HomeMenuActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tablero_principal">Tablero Principal</string>
    <string name="recetas">Recetas</string>
    <string name="recipeicon">RecipeIcon</string>
    <string name="calendaricon">CalendarIcon</string>
    <string name="todo">TODO</string>
    <string name="calendario">Calendario</string>
    <string name="title_activity_recipe_hub">RecipeHub</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plus">+</string>
    <string name="title">title</string>
    <string name="post_description">Post description goes here</string>
    <string name="post_title">Post Title Goes Here</string>
    <string name="recipeNameLabelText">Nombre de tu receta</string>
    <string name="shortDescriptionLabelText">Añade una breve descripción</string>
    <string name="stepsRecipe">Ahora, escribe los pasos a seguir</string>
    <string name="imagen">Imagen</string>
    <string name="anadir_receta">Añadir Receta</string>
    <string name="image_file_name">Nombre de tu imagen</string>
    <string name="anadir">Añadir</string>
    <string name="user_selected_image">User Selected Image</string>
    <string name="elegir_imagen">Elegir Imagen</string>
    <string name="anadir_comentario">Añadir Comentario</string>
    <string name="titulo">Titulo</string>
    <string name="enviar">Enviar</string>
    <string name="ultimos_comentarios">Ultimos Comentarios</string>
    <string name="social">Social</string>
    <string name="telleveryone">¿Que quieres contarle a todos?</string>
    <string name="crear_recordatorio_label">Crear Recordatorio</string>
    <string name="recordatorios">Recordatorios</string>
</resources>
