<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradientlogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="357dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="372dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/logo2"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="335dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:autofillHints=""
        android:backgroundTint="#fff"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        tools:targetApi="lollipop"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>


    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="335dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:autofillHints=""
        android:backgroundTint="#fff"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        tools:targetApi="lollipop"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:labelFor="@id/emailLogin"
        android:text="@string/email"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:labelFor="@id/passwordLogin"
        android:text="@string/contrasena"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/botonLogUser"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="163dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btniniciarsesion"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textColor="#4db6ac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

</androidx.constraintlayout.widget.ConstraintLayout>